mise a jour swagger
