# routes/api.php
@@ -63,9 +63,7 @@ Route::prefix('v1')->group(function () {
     Route::get('comptes/client/{telephone}', [CompteController::class, 'getComptesByTelephone']);
     Route::delete('comptes/{compte}', [CompteController::class, 'destroy']);
     Route::patch('comptes/{compte}', [CompteController::class, 'updateClient']);
-    Route::post('comptes/{compte}/bloquer', [CompteController::class, 'bloquer']);
     Route::post('comptes/{compte}/planifier-blocage', [CompteController::class, 'planifierBlocage']);
-    Route::post('comptes/{compte}/debloquer', [CompteController::class, 'debloquer']);
     Route::post('trigger-block-job', function () {
         \App\Jobs\ProcessScheduledAccountBlocks::dispatch();
         return response()->json(['message' => 'Block job triggered']);
